# deepin-terminal-gtk

./: .clog.toml  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  ChangeLog  Makefile  README  README.md  deepin-terminal  deepin-terminal-gtk.desktop  deepin-terminal.desktop  main.vala  project_path.c  project_path.c.in  ssh_login.sh  style.css  view_color.sh  zenburn
.github/ISSUE_TEMPLATE/: -bug-.md
.tx/: config
app_theme/blue/: theme.txt
app_theme/chartreuse/: theme.txt
app_theme/cyan/: theme.txt
app_theme/dark_grey/: theme.txt
app_theme/dark_purple/: theme.txt
app_theme/deep_pink/: theme.txt
app_theme/dodger_blue/: theme.txt
app_theme/gold/: theme.txt
app_theme/green_yellow/: theme.txt
app_theme/orange/: theme.txt
app_theme/purple/: theme.txt
app_theme/red/: theme.txt
app_theme/yellow/: theme.txt
cmake/: FindGettext.cmake  FindVala.cmake  ValaPrecompile.cmake  ValaVersion.cmake
debian/: changelog  control  copyright  deepin-terminal-gtk.1  manpages  postinst  postrm  prerm  rules  watch
doc/en_US/: index.md
doc/zh_CN/: index.md
i18n/: create_mo.sh  create_po.sh  create_pot.sh  deepin-terminal.pot  merge_po.sh
i18n/translations/deepin-terminal-desktop/: desktop.ts  desktop_ar.ts  desktop_ast.ts  desktop_az.ts  desktop_bg.ts  desktop_ca.ts  desktop_cs.ts  desktop_da.ts  desktop_de.ts  desktop_el.ts  desktop_en_AU.ts  desktop_eo.ts  desktop_es.ts  desktop_es_419.ts  desktop_fa.ts  desktop_fi.ts  desktop_fr.ts  desktop_gl_ES.ts  desktop_he.ts  desktop_hi_IN.ts  desktop_hr.ts  desktop_hu.ts  desktop_id.ts  desktop_ja.ts  desktop_ko.ts  desktop_lt.ts  desktop_ml.ts  desktop_mn.ts  desktop_ms.ts  desktop_ne.ts  desktop_nl.ts  desktop_pam.ts  desktop_pl.ts  desktop_pt.ts  desktop_ro.ts  desktop_sk.ts  desktop_sq.ts  desktop_sr.ts  desktop_sv.ts  desktop_ug.ts  (+4 more)
i18n/translations/deepin-terminal-gtk-desktop/: desktop_af.ts  desktop_am_ET.ts  desktop_ast.ts  desktop_bn.ts  desktop_ca.ts  desktop_cs.ts  desktop_es_419.ts  desktop_fi.ts  desktop_fil.ts  desktop_hu.ts  desktop_hy.ts  desktop_it.ts  desktop_ja.ts  desktop_mn.ts  desktop_nb.ts  desktop_pl.ts  desktop_pt.ts  desktop_pt_BR.ts  desktop_ro.ts  desktop_ru.ts  desktop_sl.ts  desktop_sr.ts  desktop_sv.ts  desktop_ta.ts  desktop_tr.ts  desktop_zh_CN.ts  desktop_zh_TW.ts
install_script/: copy_bin.sh  copy_icons.sh  copy_resource.sh  update_mo.sh
lib/: animate_timer.vala  animation.vala  config.vala  constant.vala  constant.vala.in  draw.vala  font.c  keymap.vala  menu.vala  utils.vala  xutils.vala
locale/: am.po  ar.po  ar_AA.po  ar_EG.po  ar_SA.po  ar_SY.po  bg.po  cs.po  da.po  de.po  de_AT.po  de_DE.po  deepin-terminal.pot  el.po  el_GR.po  en_AU.po  en_US.po  es.po  es_CL.po  es_ES.po  es_MX.po  es_PY.po  es_VE.po  fi.po  fr.po  he.po  hr.po  hu.po  hy.po  hy_AM.po  id.po  id_ID.po  it.po  ja.po  ms.po  nl.po  nl_NL.po  pam.po  pl.po  pl_PL.po  (+18 more)
locale/ar/LC_MESSAGES/: deepin-terminal.mo
locale/ar_AA/LC_MESSAGES/: deepin-terminal.mo
locale/ar_EG/LC_MESSAGES/: deepin-terminal.mo
locale/ar_SA/LC_MESSAGES/: deepin-terminal.mo
locale/ar_SY/LC_MESSAGES/: deepin-terminal.mo
locale/cs/LC_MESSAGES/: deepin-terminal.mo
locale/da/LC_MESSAGES/: deepin-terminal.mo
locale/de/LC_MESSAGES/: deepin-terminal.mo
locale/de_AT/LC_MESSAGES/: deepin-terminal.mo
locale/de_DE/LC_MESSAGES/: deepin-terminal.mo
locale/el_GR/LC_MESSAGES/: deepin-terminal.mo
locale/en_AU/LC_MESSAGES/: deepin-terminal.mo
locale/en_US/LC_MESSAGES/: deepin-terminal.mo
locale/es/LC_MESSAGES/: deepin-terminal.mo
locale/es_CL/LC_MESSAGES/: deepin-terminal.mo
locale/es_ES/LC_MESSAGES/: deepin-terminal.mo
locale/es_MX/LC_MESSAGES/: deepin-terminal.mo
locale/es_PY/LC_MESSAGES/: deepin-terminal.mo
locale/es_VE/LC_MESSAGES/: deepin-terminal.mo
locale/fi/LC_MESSAGES/: deepin-terminal.mo
locale/fr/LC_MESSAGES/: deepin-terminal.mo
locale/he/LC_MESSAGES/: deepin-terminal.mo
locale/hu/LC_MESSAGES/: deepin-terminal.mo
locale/hy/LC_MESSAGES/: deepin-terminal.mo
locale/hy_AM/LC_MESSAGES/: deepin-terminal.mo
locale/id_ID/LC_MESSAGES/: deepin-terminal.mo
locale/it/LC_MESSAGES/: deepin-terminal.mo
manual/en_US/: index.md
manual/zh_CN/: index.md
skin/01/: config.ini
skin/02/: config.ini
skin/03/: config.ini
skin/04/: config.ini
skin/05/: config.ini
skin/06/: config.ini
skin/07/: config.ini
skin/black_clock/: config.ini
skin/blue_cherry/: config.ini
skin/blue_daisy/: config.ini
skin/brown_coffee/: config.ini
skin/colourless_glass/: config.ini
skin/glass/: config.ini
skin/green/: config.ini
skin/green_forest/: config.ini
skin/metal/: config.ini
skin/orange_jung/: config.ini
skin/red_logo/: config.ini
skin/wood/: config.ini
src/: .#ssh_login.sh  main.py  nls.py  ssh_login.sh
theme/: aci  aco  argonaut  azu  bim  breeze  cai  chalk  deepin  dracula  elementary  elic  elio  empathy  flat  freya  gruvbox dark  gruvbox light  hemisu dark  hemisu light  hybrid  jup  linux console  mar  material  miu  monokai dark  nep  ocean dark  one dark  one light  pali  peppermint  sat  shel  smyck  solarized dark  solarized light  tango  tin  (+8 more)
tools/: locale_config.ini
vapi/: fontconfig.vapi  gdk-3.0.vapi  gee-0.8.vapi  gee-1.0.vapi  vte-2.91.vapi  xcb.vapi
widget/: about_dialog.vala  about_widget.vala  add_button.vala  add_command_button.vala  add_server_button.vala  appbar.vala  base_panel.vala  base_window.vala  check_button.vala  checkbutton.vala  click_event_box.vala  command_button.vala  command_dialog.vala  command_panel.vala  config_window.vala  confirm_dialog.vala  cursor_toggle_button.vala  dialog.vala  dialog_button.vala  dropdown_text_button.vala  encoding_button.vala  encoding_panel.vala  entry.vala  entry_menu.vala  event_box.vala  file_button.vala  highlight_frame.vala  history_dialog.vala  hotkey_preview.vala  image_button.vala  link_button.vala  listview.vala  panel_button.vala  password_button.vala  preference.vala  preference_slidebar.vala  progressbar.vala  quake_window.vala  remote_panel.vala  remote_server.vala  (+27 more)
(+110 files in other folders)
